Reuse and repeat custom properties

--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -4,7 +4,7 @@
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: #090909;
+    --text-color: var(--color-black);
 }
 html {
     scroll-behavior: smooth;
@@ -15,14 +15,14 @@ body {
 }
 
 a {
-    color: #161616;
+    color: var(--text-color);
 }
 
 .visually-hidden {
     display: none;
 }
 .card-category {
-    color:#D73953;
+    color: var(--color-primary);
 }
 .section-tagline {
     color: var(--color-primary);
