Defining line heights

--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -17,6 +17,10 @@
 
     --font-weight-regular: 400;
     --font-weight-bold: 700;
+
+    --line-height-small: 1.2;
+    --line-height-base: 1.5;
+    --line-height-big: 1.8;
 }
 html {
     scroll-behavior: smooth;
@@ -28,6 +32,7 @@ body {
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
+    min-height: var(--line-height-base);
 }
 
 h1, h2, h3, h4, h5, h6 {
