Clear the context of the grid

--- a/0x02-CSS_advanced/styles/20-style.css
+++ b/0x02-CSS_advanced/styles/20-style.css
@@ -247,7 +247,8 @@ a:active {
     color: var(--nav-item-link-hover);
 }
 
-.row {
+.row::after {
+    content: "";
     display: table;
     clear: both;
 }
