Add a dark theme to sections

--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -286,7 +286,7 @@ ul.row {
     text-align: right;
 }
 
-[data-selection-theme="dark"] {
+[data-section-theme="dark"] {
     --text-color: var(--color-white);
     --section-title-color: var(--color-white);
     background-color: var(--color-black);
