Set the horizontal position of the element

--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -331,7 +331,7 @@ a:active {
 
 .header-logo a {
     display: var(--header-logo-link-display);
-    position: var(--header-logo-position);
+    position: var(--header-logo-link-position);
     top: var(--header-logo-link-top);
     left: var(--header-logo-link-left);
 }
