--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -327,7 +327,7 @@ a:active {
     height: 0.2rem;
 }
 
-.nav .nav-item .nav-link::before {
+.nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
