Fix the works section

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -224,7 +224,7 @@ a:active {
     color: var(--color-primary);
 }
 
-.card-work .card-image {
+.card-work .card-outer {
     position: relative;
     overflow: hidden;
 }
