--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -256,15 +256,13 @@ a:active {
     position: relative;
 }
 
-.card-title a,
-.card-work a {
+.card-work .card-title a {
     display: block;
     text-decoration: none;
     padding-top: 45%;
 }
 
-.card-title a::after,
-.card-work a::after {
+.card-work .card-title a::after{
     position: absolute;
     top: 0;
     right: 0;
