--- a/0x02-CSS_advanced/styles/31-style.css
+++ b/0x02-CSS_advanced/styles/31-style.css
@@ -282,7 +282,7 @@ a:active {
 .card-testimonial .card-quote::before {
     content: "\201C";
     position: absolute;
-    vertical-align: -4.5rem;
+    top: -4.5rem;
     left: -1rem;
     color: #efeded;
     font-size: 10rem;
