Add quotes decoration on testimonials

--- a/0x02-CSS_advanced/styles/31-style.css
+++ b/0x02-CSS_advanced/styles/31-style.css
@@ -282,11 +282,11 @@ a:active {
 .card-testimonial .card-quote::before {
     content: "\201C";
     position: absolute;
-    top: -4.5rem;
+    vertical-align: -4.5rem;
     left: -1rem;
     color: #efeded;
     font-size: 10rem;
-    z-index: 1;
+    z-index: -1;
 }
 
 .section {
